policies/gatekeeper/constrainttemplate.yaml

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata: { name: k8srequiredsignatures }
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredSignatures
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredsignatures
      violation[{"msg": msg}] {
        not input.review.object.spec.template.spec.containers[_].imagePullSecrets
        msg := "Unsigned image"
      }
